--- a/network.yml
+++ b/network.yml
@@ -1,41 +1,32 @@
-Description: >
-    This template deploys a VPC, with a pair of public and private subnets spread 
-    across two Availabilty Zones. It deploys an Internet Gateway, with a default 
-    route on the public subnets. It deploys a pair of NAT Gateways (one in each AZ), 
-    and default routes for them in the private subnets.
+Description: This template deploys network infrastructure needed for Udagram web application.
 
 Parameters:
-
     EnvironmentName:
-        Description: An environment name that will be prefixed to resource names
+        Description: This name will be prefixed to all the resources.
         Type: String
-
     VpcCIDR:
-        Description: Please enter the IP range (CIDR notation) for this VPC
+        Description: CIDR for Udagram App VPC
         Type: String
         Default: 10.0.0.0/16
-
     PublicSubnet1CIDR:
-        Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
+        Description: CIDR for Udagram App Public Subnet 1
         Type: String
         Default: 10.0.0.0/24
-
     PublicSubnet2CIDR:
-        Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
+        Description: CIDR for Udagram App Public Subnet 2
         Type: String
         Default: 10.0.1.0/24
-
     PrivateSubnet1CIDR:
-        Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
+        Description: CIDR for Udagram App Private Subnet 1
         Type: String
         Default: 10.0.2.0/24
-
     PrivateSubnet2CIDR:
-        Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
+        Description: CIDR for Udagram App Private Subnet 2
         Type: String
         Default: 10.0.3.0/24
 
 Resources:
+    # VPC
 
     VPC:
         Type: AWS::EC2::VPC
@@ -46,6 +37,8 @@ Resources:
                 - Key: Name
                   Value: !Ref EnvironmentName
 
+    #Internet Gateway
+
     InternetGateway:
         Type: AWS::EC2::InternetGateway
         Properties:
@@ -53,17 +46,21 @@ Resources:
                 - Key: Name
                   Value: !Ref EnvironmentName
 
+    # Attachment of Internet Gateway to VPC
+
     InternetGatewayAttachment:
         Type: AWS::EC2::VPCGatewayAttachment
         Properties:
             InternetGatewayId: !Ref InternetGateway
             VpcId: !Ref VPC
 
+    # Subnets
+
     PublicSubnet1:
         Type: AWS::EC2::Subnet
         Properties:
             VpcId: !Ref VPC
-            AvailabilityZone: !Select [ 0, !GetAZs '' ]
+            AvailabilityZone: !Select [0, !GetAZs ""]
             CidrBlock: !Ref PublicSubnet1CIDR
             MapPublicIpOnLaunch: true
             Tags:
@@ -74,7 +71,7 @@ Resources:
         Type: AWS::EC2::Subnet
         Properties:
             VpcId: !Ref VPC
-            AvailabilityZone: !Select [ 1, !GetAZs '' ]
+            AvailabilityZone: !Select [1, !GetAZs ""]
             CidrBlock: !Ref PublicSubnet2CIDR
             MapPublicIpOnLaunch: true
             Tags:
@@ -85,7 +82,7 @@ Resources:
         Type: AWS::EC2::Subnet
         Properties:
             VpcId: !Ref VPC
-            AvailabilityZone: !Select [ 0, !GetAZs '' ]
+            AvailabilityZone: !Select [0, !GetAZs ""]
             CidrBlock: !Ref PrivateSubnet1CIDR
             MapPublicIpOnLaunch: false
             Tags:
@@ -96,12 +93,14 @@ Resources:
         Type: AWS::EC2::Subnet
         Properties:
             VpcId: !Ref VPC
-            AvailabilityZone: !Select [ 1, !GetAZs '' ]
+            AvailabilityZone: !Select [1, !GetAZs ""]
             CidrBlock: !Ref PrivateSubnet2CIDR
             MapPublicIpOnLaunch: false
             Tags:
                 - Key: Name
                   Value: !Sub ${EnvironmentName} Private Subnet (AZ2)
+
+    ## Network Address Translation (NAT) Gateways
 
     NatGateway1EIP:
         Type: AWS::EC2::EIP
@@ -127,6 +126,9 @@ Resources:
             AllocationId: !GetAtt NatGateway2EIP.AllocationId
             SubnetId: !Ref PublicSubnet2
 
+    ## Routing Configuration
+
+    # Public route table attached with VPC
     PublicRouteTable:
         Type: AWS::EC2::RouteTable
         Properties:
@@ -135,6 +137,7 @@ Resources:
                 - Key: Name
                   Value: !Sub ${EnvironmentName} Public Routes
 
+    # Rule that directs all traffic to Internet Gateway
     DefaultPublicRoute:
         Type: AWS::EC2::Route
         DependsOn: InternetGatewayAttachment
@@ -143,19 +146,21 @@ Resources:
             DestinationCidrBlock: 0.0.0.0/0
             GatewayId: !Ref InternetGateway
 
+    # Associating public route table with first public subnet
     PublicSubnet1RouteTableAssociation:
         Type: AWS::EC2::SubnetRouteTableAssociation
         Properties:
             RouteTableId: !Ref PublicRouteTable
             SubnetId: !Ref PublicSubnet1
 
+    # Associating public route table with second public subnet
     PublicSubnet2RouteTableAssociation:
         Type: AWS::EC2::SubnetRouteTableAssociation
         Properties:
             RouteTableId: !Ref PublicRouteTable
             SubnetId: !Ref PublicSubnet2
 
-
+    # First private route table attached with VPC
     PrivateRouteTable1:
         Type: AWS::EC2::RouteTable
         Properties:
@@ -164,6 +169,7 @@ Resources:
                 - Key: Name
                   Value: !Sub ${EnvironmentName} Private Routes (AZ1)
 
+    # Rule that direct all internal traffic to first NAT Gateway
     DefaultPrivateRoute1:
         Type: AWS::EC2::Route
         Properties:
@@ -171,12 +177,14 @@ Resources:
             DestinationCidrBlock: 0.0.0.0/0
             NatGatewayId: !Ref NatGateway1
 
+    # Associating first private route table with first private subnet
     PrivateSubnet1RouteTableAssociation:
         Type: AWS::EC2::SubnetRouteTableAssociation
         Properties:
             RouteTableId: !Ref PrivateRouteTable1
             SubnetId: !Ref PrivateSubnet1
 
+    # Second private route table attached with VPC
     PrivateRouteTable2:
         Type: AWS::EC2::RouteTable
         Properties:
@@ -185,6 +193,7 @@ Resources:
                 - Key: Name
                   Value: !Sub ${EnvironmentName} Private Routes (AZ2)
 
+    # Rule that direct all internal traffic to second NAT Gateway
     DefaultPrivateRoute2:
         Type: AWS::EC2::Route
         Properties:
@@ -192,6 +201,7 @@ Resources:
             DestinationCidrBlock: 0.0.0.0/0
             NatGatewayId: !Ref NatGateway2
 
+    # Associating second private route table with second private subnet
     PrivateSubnet2RouteTableAssociation:
         Type: AWS::EC2::SubnetRouteTableAssociation
         Properties:
@@ -199,63 +209,62 @@ Resources:
             SubnetId: !Ref PrivateSubnet2
 
 Outputs:
-
     VPC:
         Description: A reference to the created VPC
         Value: !Ref VPC
         Export:
-          Name: !Sub ${EnvironmentName}-VPCID
+            Name: !Sub ${EnvironmentName}-VPCID
 
     VPCPublicRouteTable:
-        Description: Public Routing
+        Description: Public Routing to Load Balancer in Public Subnet
         Value: !Ref PublicRouteTable
         Export:
-          Name: !Sub ${EnvironmentName}-PUB-RT
+            Name: !Sub ${EnvironmentName}-PUB-RT
 
-    VPCPrivateRouteTable1:
-        Description: Private Routing AZ1
+    VPCPrivateRouteTable01:
+        Description: Private Routing to PrivateSubnet01
         Value: !Ref PrivateRouteTable1
         Export:
-          Name: !Sub ${EnvironmentName}-PRI1-RT
+            Name: !Sub ${EnvironmentName}-PRI-RT01
 
-    VPCPrivateRouteTable2:
-        Description: Private Routing AZ2
+    VPCPrivateRouteTable02:
+        Description: Private Routing to PrivateSubnet02
         Value: !Ref PrivateRouteTable2
         Export:
-          Name: !Sub ${EnvironmentName}-PRI2-RT
+            Name: !Sub ${EnvironmentName}-PRI-RT02
 
     PublicSubnets:
-        Description: A list of the public subnets
-        Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
+        Description: A list of the public subnets in the project
+        Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubnet2]]
         Export:
-          Name: !Sub ${EnvironmentName}-PUB-NETS
+            Name: !Sub ${EnvironmentName}-PUB-NETS
 
-    PrivateSubnets:
-        Description: A list of the private subnets
-        Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
-        Export:
-          Name: !Sub ${EnvironmentName}-PRIV-NETS
-
-    PublicSubnet1:
-        Description: A reference to the public subnet in the 1st Availability Zone
+    PublicSubnet01:
+        Description: A reference to the public subnet in AZ-A
         Value: !Ref PublicSubnet1
         Export:
-          Name: !Sub ${EnvironmentName}-PUB1-SN
+            Name: !Sub ${EnvironmentName}-PUB-SN01
 
-    PublicSubnet2:
-        Description: A reference to the public subnet in the 2nd Availability Zone
+    PublicSubnet02:
+        Description: A reference to the public subnet in AZ-B
         Value: !Ref PublicSubnet2
         Export:
-          Name: !Sub ${EnvironmentName}-PUB2-SN
+            Name: !Sub ${EnvironmentName}-PUB-SN02
 
-    PrivateSubnet1:
-        Description: A reference to the private subnet in the 1st Availability Zone
+    PrivateSubnets:
+        Description: A list of the private subnets in the project
+        Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
+        Export:
+            Name: !Sub ${EnvironmentName}-PRI-NETS
+
+    PrivateSubnet01:
+        Description: A reference to the private subnet in AZ-A
         Value: !Ref PrivateSubnet1
         Export:
-          Name: !Sub ${EnvironmentName}-PRI1-SN
+            Name: !Sub ${EnvironmentName}-PRI-SN01
 
-    PrivateSubnet2:
-        Description: A reference to the private subnet in the 2nd Availability Zone
+    PrivateSubnet02:
+        Description: A reference to the private subnet in AZ-B
         Value: !Ref PrivateSubnet2
         Export:
-          Name: !Sub ${EnvironmentName}-PRI2-SN
+            Name: !Sub ${EnvironmentName}-PRI-SN02
